Argocd-with-helm/01-argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-server-ingress
    namespace: argocd
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
        kubernetes.io/ingress.class: nginx
        kubernetes.io/tls-acme: 'true'
        nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
        # If you encounter a redirect loop or are getting a 307 response code
        # then you need to force the nginx ingress to connect to the backend using HTTPS.
        #
        nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
    rules:
        - host: 'argo.inganyoyo.kr'
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                name: https
    tls:
        - hosts:
              - 'argo.inganyoyo.kr'
          secretName: argocd-secret # do not change, this is provided by Argo CD
